--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 
 
-version = '0.0.1-1.18.2'
+version = '1.0.0'
 group = 'com.momo.deathban' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'deathban'
 
