--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ apply plugin: 'org.spongepowered.mixin'
 
 
 version = '1.0.0'
-group = 'com.momo.deathban' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'com.grace.deathban' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'deathban'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
@@ -191,11 +191,11 @@ jar {
     manifest {
         attributes([
                 "Specification-Title"     : "deathban",
-                "Specification-Vendor"    : "momo",
+                "Specification-Vendor"    : "grace",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
-                "Implementation-Vendor"   : "momo",
+                "Implementation-Vendor"   : "grace",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
