--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ apply plugin: 'org.spongepowered.mixin'
 
 
 version = '1.0.0'
-group = 'com.grace.deathban' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'in.gracel.deathban' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'deathban'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
